# lz4_stream

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  SConstruct  appveyor.yml  lz4_compress.cpp  lz4_decompress.cpp  lz4_dropin.cpp  lz4_input_stream.cpp  lz4_output_stream.cpp  lz4_stream.h  lz4_stream_test.cpp  test_lz4_stream.cpp
cmake/: FindLZ4.cmake
include/: lz4_stream.h  lz4_stream.hpp
lz4/: CMakeLists.txt
lz4/include/: lz4hc.hpp
lz4/src/: lz4.cpp  lz4frame.cpp  lz4hc.cpp  xxhash.cpp
src/: lz4frame.cpp
test/: CMakeLists.txt  lz4_stream_test.cpp
